fix weird infographic stretching

--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ a:visited {
 }
 
 .imgcontainer img {
-    height: auto;
+    align-self: center;
 }
 
 .section {
